syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";
import "NullableGrpcDecimal.proto";

message UpdateTaskRequest {
	int64 CaseId =  1;
	int32 TaskIdSb = 2;
	oneof Amendments {
		Retention Retention = 3;
	}
}

message Retention {
	cis.types.NullableGrpcDate InterestRateValidFrom = 1;
	cis.types.NullableGrpcDecimal LoanInterestRate = 2;
	cis.types.NullableGrpcDecimal LoanInterestRateProvided = 3;
	cis.types.NullableGrpcDecimal LoanPaymentAmount = 4;
	cis.types.NullableGrpcDecimal LoanPaymentAmountFinal = 5;
	cis.types.NullableGrpcDecimal FeeSum = 6;
	cis.types.NullableGrpcDecimal FeeFinalSum = 7;
	google.protobuf.Int32Value FixedRatePeriod = 8;
}